This is a history of changes that affect users and maintainers of
proiel-webapp. It does not list all changes; see the git history for that.

1.6.0   unreleased

  - Removed raw text importer. The command-line utilities should now be
    used to preprocess raw text.
  - Removed JSON importer and exporter. This functionality was never
    completed.
  - Added option to write an ID mapping file if importing PROIEL XML with
    existing ID attributes.

1.5.0   20/05/2015

  - Upgraded to Rails branch 3-2-stable (Rails 3.2.21 + additional patches).
  - Moved help pages and additional documentation to the project's github
    wiki.
  - Added rack-profiler to development instances.
  - Restricted changelog display to last week's changes.
  - Restricted search results to 5,000 results.
  - Exporter job by default now runs every week instead of every day.
  - Removed CoNLL and text exporters. PROIEL XML can now be converted to
    these formats by using the PROIEL command-line utilities.

1.4.0   20/03/2014

  - Replaced the TEI header in the sources table and the column editor in the
    sources table with multiple metadata fields that are serialised in the
    column additional_metadata. Migration is not automatic; old TEI headers
    will be silently dropped.
  - PROIEL XML updated to version 2.0. Version 2.0 is not backwards compatible
    with version 1.0. PROIEL XML 1.0 can still be imported but all exports are
    now in PROIEL XML 2.0.
  - Split inflections.lemma into inflections.lemma and
    inflections.part_of_speech_tag for consistency.

1.3.0   05/02/2014

  - Relaxed constraints on lemmata.variant to allow any integer value or null.
    Annotators/reviewers should enfore a convention on the values permitted for
    lemmata.variant if so desired.

1.2.1   16/12/2013

  - Made handling of empty citation_parts more robust.
  - Moved mailer configuration to config/environment.rb.

1.2.0   09/12/2013

  - Upgraded to Rails 3.2.16.