@@ -1,34 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema" elementFormDefault="qualified"
-    version="2.0.5" targetNamespace="http://korpling.german.hu-berlin.de/tiger2/V2.0.5/"
-    xmlns:tiger2="http://korpling.german.hu-berlin.de/tiger2/V2.0.5/">
-    <xs:include schemaLocation="DatCat.xsd"/>
-
-    <xs:element name="annotation" type="tiger2:annotationType"/>
-
-    <xs:complexType name="annotationType">
-        <xs:choice>
-            <xs:element maxOccurs="unbounded" name="feature" type="tiger2:featureType"/>
-            <xs:element name="external" type="tiger2:anyAnnotationType"/>
-        </xs:choice>
-    </xs:complexType>
-
-    <xs:complexType name="featureType">
-        <xs:sequence>
-            <xs:element name="value" minOccurs="0" maxOccurs="unbounded" type="tiger2:valueType"/>
-        </xs:sequence>
-        <xs:attribute name="domain" use="required" type="xs:NCName"/>
-        <xs:attribute name="name" use="required" type="xs:NCName"/>
-        <xs:attribute name="type" type="xs:NCName"/>
-        <xs:attribute name="datcat" type="tiger2:datcat"/>
-    </xs:complexType>
-
-    <xs:complexType mixed="true" name="valueType">
-        <xs:attribute name="name" use="required" type="xs:NMTOKEN"/>
-        <xs:attribute name="datcat" type="tiger2:datcat"/>
-    </xs:complexType>
-
-    <xs:complexType name="anyAnnotationType">
-        <xs:attribute name="corresp" use="required" type="xs:anyURI"/>
-    </xs:complexType>
-</xs:schema>
