@@ -1,29 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema" elementFormDefault="qualified"
-    version="2.0.5" targetNamespace="http://korpling.german.hu-berlin.de/tiger2/V2.0.5/"
-    xmlns:tiger2="http://korpling.german.hu-berlin.de/tiger2/V2.0.5/">
-
-    <xs:include schemaLocation="DatCat.xsd"/>
-
-    <xs:element name="meta" type="tiger2:metaType"/>
-    <xs:complexType name="metaType">
-        <xs:sequence>
-            <xs:element name="name" minOccurs="1" type="xs:string" nillable="false"/>
-            <xs:choice>
-                <xs:sequence>
-                    <xs:element name="author" minOccurs="0" type="xs:string"/>
-                    <xs:element name="date" minOccurs="0" type="xs:string"/>
-                    <xs:element name="description" minOccurs="0" type="xs:string"/>
-                    <xs:element name="format" minOccurs="0" type="xs:string"/>
-                    <xs:element name="history" minOccurs="0" type="xs:string"/>
-                </xs:sequence>
-                <xs:element name="external" minOccurs="1">
-                    <xs:complexType>
-                        <xs:attribute name="corresp" type="xs:anyURI" use="required"/>
-                    </xs:complexType>
-                </xs:element>
-            </xs:choice>
-        </xs:sequence>
-    </xs:complexType>
-
-</xs:schema>
